# GT_SUPER_CONTROLLER_PRO-v01

./: CHANGELOG.md  LICENSE  README.md
.github/workflows/: build.yml
desktop/: GT_SUPER_CONTROLLER.spec  gt_super_controller_launcher.py  pyproject.toml
desktop/gt_super_controller/: app.py  config.py  device_manager.py  keyboard_chord.py  launcher.py  macro.py  startup.py
desktop/tests/: test_calibration_service.py  test_config.py  test_device_manager.py  test_keyboard_chord.py  test_launcher.py  test_macro.py  test_motion_sync.py  test_project_integrity.py
docs/: BAGLANTI.md  BUILD_STATUS.md  GITHUB_UF2.md  KALIBRASYON.md  PARADISE_LOST_1_KREDI.md  PROTOKOL.md  TEST_PLANI.md
firmware/: CMakeLists.txt
firmware/common/: CMakeLists.txt  crc32.c  crc32.h  debounce.c  debounce.h  flash_store.c  flash_store.h  tusb_config.h
firmware/controller/: CMakeLists.txt  main.c  usb_descriptors.c
firmware/gun/: CMakeLists.txt  main.c  usb_descriptors.c
firmware/host_tests/: flash_store_test.c
firmware/host_tests/stubs/hardware/: flash.h  sync.h
firmware/host_tests/stubs/pico/: stdlib.h
scripts/: build_firmware.sh  build_windows.ps1  check_firmware_size.py  set_version.py
