[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "gt-super-controller"
version = "0.4.0"
description = "Two-player RP2040 arcade/lightgun controller manager"
requires-python = ">=3.11"
dependencies = ["pyserial==3.5"]

[project.scripts]
gt-super-controller = "gt_super_controller.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
